Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL)
Description
Test:
create view v1 as select substring('hello', 1, 4294967295); |
select * from v1; |
drop view v1; |
Actual result:
empty string
Expected result:
hello
|
Attachments
Issue Links
- is part of
-
MDEV-27691
make working view-protocol
-
- Closed
-
- relates to
-
MDEV-28651 quote(NULL) returns incorrect result in view ('NU' instead of 'NULL')
-
- Closed
-