MDEV-28652 SUBSTRING(str,pos,len) returns incorrect result in view (returns an empty string)

Item_func_substr::fix_length_and_dec() incorrecltly calculated its max_length
to 0 when a huge number was passed as the third argument:
  substring('hello', 1, 4294967295)
Fixing this.